Expose Environment builder, remove building aspects from model